--- a/.env
+++ b/.env
@@ -12,3 +12,7 @@ VITE_APP_VERSION=1.0.0
 
 # Logging
 VITE_ENABLE_CONSOLE_LOGS=true
+
+# Realtime (SignalR)
+# Set to true to enable SignalR realtime notifications, false to disable initializing the websocket connection
+VITE_ENABLE_SIGNALR=false
