--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@react-types/shared": "3.31.0",
     "@tailwindcss/postcss": "4.1.11",
     "@tailwindcss/vite": "4.1.11",
+    "@types/recharts": "^1.8.29",
     "@types/uuid": "^10.0.0",
     "clsx": "2.1.1",
     "date-fns": "^4.1.0",
@@ -60,6 +61,7 @@
     "react-router-dom": "6.23.0",
     "react-virtualized": "^9.22.6",
     "react-window": "^1.8.11",
+    "recharts": "^3.2.0",
     "tailwind-variants": "2.0.1",
     "tailwindcss": "4.1.11",
     "uuid": "^11.1.0",
