--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "tailwind-variants": "2.0.1",
     "tailwindcss": "4.1.11",
     "uuid": "^11.1.0",
-    "wx-react-gantt": "^1.3.1"
+    "wx-react-gantt": "^1.3.1",
+    "dhtmlx-gantt": "^9.0.14"
   },
   "devDependencies": {
     "@eslint/compat": "1.2.8",
