fix(env): update API URL and connection string for development environment

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # Development Environment Variables
 NODE_ENV=development
 
-# API Configuration
-VITE_API_URL=http://localhost:52246/api
+# API Configuration  //52246
+VITE_API_URL=http://localhost:3002/api 
 VITE_WS_URL=ws://localhost:3002
 VITE_USE_MOCK_API=false
 
