--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,10 @@ pnpm-lock.yaml
 yarn.lock
 package-lock.json
 bun.lockb
-obj/
-bin/
- 
+
+# Build outputs
+**/obj/
+**/bin/
+
+# Visual Studio
 .vs/
