Refactor API Controllers and Services for Role and Action Management
- Updated ActionsController to remove pagination and implement filtering directly on the retrieved actions.
- Enhanced ProjectsController error logging to include stack trace for better debugging.
- Modified RolesController to use DTOs for role management, including creation, updating, and retrieval.
- Added mapping services for converting between entities and DTOs.
- Refactored RoleService to utilize mapping services for role and action DTOs.
- Updated UserService to streamline action handling and improve data retrieval.
- Enhanced logging configuration in appsettings for both Development and Production environments.
- Introduced new DTOs for Role and Action management to improve data handling and validation.
- Cleaned up navbar component by removing unnecessary admin section rendering.
- Improved user hooks to handle missing category names gracefully.
- Added PowerShell script to automate registration of mapping services in Program.cs.

--- a/pma-api-server/src/PMA.Api/appsettings.Production.json
+++ b/pma-api-server/src/PMA.Api/appsettings.Production.json
@@ -1,41 +1,54 @@
 {
   "Serilog": {
     "MinimumLevel": {
-      "Default": "Warning",
+      "Default": "Information",
       "Override": {
         "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "Microsoft.AspNetCore": "Warning",
+        "Microsoft.EntityFrameworkCore": "Error",
+        "Microsoft.EntityFrameworkCore.Database.Command": "Error",
         "System": "Error",
-        "Microsoft.EntityFrameworkCore": "Error"
+        "PMA.Api.Controllers": "Information",
+        "PMA.Core.Services": "Information"
       }
     },
     "WriteTo": [
       {
         "Name": "Console",
         "Args": {
-          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {Level:u3}] {Message:lj} {NewLine}{Exception}"
+          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
         }
       },
       {
         "Name": "File",
         "Args": {
-          "path": "logs/log-.txt",
+          "path": "logs/prod-.log",
           "rollingInterval": "Day",
           "retainedFileCountLimit": 90,
-          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj} {NewLine}{Exception}",
-          "shared": true
+          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog",
+          "shared": true,
+          "fileSizeLimitBytes": 52428800,
+          "rollOnFileSizeLimit": true
         }
       },
       {
         "Name": "File",
         "Args": {
-          "path": "logs/error-.txt",
+          "path": "logs/prod-errors-.log",
           "rollingInterval": "Day",
-          "retainedFileCountLimit": 90,
+          "retainedFileCountLimit": 365,
           "restrictedToMinimumLevel": "Error",
-          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj} {NewLine}{Exception}",
-          "shared": true
+          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog",
+          "shared": true,
+          "fileSizeLimitBytes": 52428800,
+          "rollOnFileSizeLimit": true
         }
       }
-    ]
+    ],
+    "Properties": {
+      "Application": "PMA.Api",
+      "Environment": "Production"
+    }
   }
 }
