--- a/pma-api-server/src/PMA.Api/appsettings.json
+++ b/pma-api-server/src/PMA.Api/appsettings.json
@@ -16,41 +16,57 @@
       "Default": "Information",
       "Override": {
         "Microsoft": "Warning",
-        "System": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "Microsoft.AspNetCore": "Warning",
         "Microsoft.EntityFrameworkCore": "Warning",
-        "Microsoft.AspNetCore": "Warning"
+        "System": "Warning",
+        "PMA.Api.Controllers": "Information"
       }
     },
-    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId", "WithProcessId"],
+    "Enrich": [
+      "FromLogContext", 
+      "WithMachineName", 
+      "WithThreadId", 
+      "WithProcessId",
+      "WithEnvironmentName",
+      "WithProcessName"
+    ],
     "WriteTo": [
       {
         "Name": "Console",
         "Args": {
-          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
-          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} {NewLine}{Exception}"
+          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
         }
       },
       {
         "Name": "File",
         "Args": {
-          "path": "logs/log-.txt",
+          "path": "logs/app-.log",
           "rollingInterval": "Day",
           "retainedFileCountLimit": 30,
-          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj} {NewLine}{Exception}",
-          "shared": true
+          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog",
+          "shared": true,
+          "fileSizeLimitBytes": 10485760,
+          "rollOnFileSizeLimit": true
         }
       },
       {
         "Name": "File",
         "Args": {
-          "path": "logs/error-.txt",
+          "path": "logs/errors-.log",
           "rollingInterval": "Day",
-          "retainedFileCountLimit": 30,
+          "retainedFileCountLimit": 90,
           "restrictedToMinimumLevel": "Error",
-          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj} {NewLine}{Exception}",
-          "shared": true
+          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog",
+          "shared": true,
+          "fileSizeLimitBytes": 10485760,
+          "rollOnFileSizeLimit": true
         }
       }
-    ]
+    ],
+    "Properties": {
+      "Application": "PMA.Api",
+      "Environment": "Production"
+    }
   }
 }
