feat: Update Serilog configuration to include Seq sink and adjust API URL

--- a/pma-api-server/src/PMA.Api/appsettings.Development.json
+++ b/pma-api-server/src/PMA.Api/appsettings.Development.json
@@ -50,6 +50,13 @@
           "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog",
           "shared": true
         }
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:52247",
+          "restrictedToMinimumLevel": "Information"
+        }
       }
     ],
     "Properties": {
