--- a/pma-api-server/src/PMA.Api/appsettings.json
+++ b/pma-api-server/src/PMA.Api/appsettings.json
@@ -11,7 +11,7 @@
     "DefaultConnection": "Server=hamdy;Database=PMA;Integrated Security=True;TrustServerCertificate=True;"
   },
   "Serilog": {
-    "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Debug"],
+    "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Seq"],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -48,6 +48,13 @@
           "shared": true,
           "fileSizeLimitBytes": 10485760,
           "rollOnFileSizeLimit": true
+        }
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:52247",
+          "restrictedToMinimumLevel": "Information"
         }
       },
       {
