--- a/package.json
+++ b/package.json
@@ -47,10 +47,13 @@
     "@react-types/shared": "3.31.0",
     "@tailwindcss/postcss": "4.1.11",
     "@tailwindcss/vite": "4.1.11",
+    "@tanstack/react-query": "^5.89.0",
+    "@tanstack/react-query-devtools": "^5.89.0",
     "@types/recharts": "^1.8.29",
     "@types/uuid": "^10.0.0",
     "clsx": "2.1.1",
     "date-fns": "^4.1.0",
+    "dhtmlx-gantt": "^9.0.14",
     "framer-motion": "11.18.2",
     "lucide-react": "^0.539.0",
     "quill": "^2.0.3",
@@ -66,8 +69,7 @@
     "tailwind-variants": "2.0.1",
     "tailwindcss": "4.1.11",
     "uuid": "^11.1.0",
-    "wx-react-gantt": "^1.3.1",
-    "dhtmlx-gantt": "^9.0.14"
+    "wx-react-gantt": "^1.3.1"
   },
   "devDependencies": {
     "@eslint/compat": "1.2.8",
