--- a/pma-api-server/src/PMA.Core/PMA.Core.csproj
+++ b/pma-api-server/src/PMA.Core/PMA.Core.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.9.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="9.0.9" />
   </ItemGroup>
 
 </Project>
