Implement project requirement management features with DTOs and statistics

--- a/pma-api-server/src/PMA.Api/appsettings.json
+++ b/pma-api-server/src/PMA.Api/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=hamdy;Database=PMA;Integrated Security=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=INETPC-4000;Database=PMA;Integrated Security=True;TrustServerCertificate=True;"
   },
   "Serilog": {
     "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Seq"],
