--- a/pma-api-server/src/PMA.Api/appsettings.json
+++ b/pma-api-server/src/PMA.Api/appsettings.json
@@ -7,8 +7,12 @@
     }
   },
   "AllowedHosts": "*",
+  "AttachmentSettings": {
+    "MaxFileSize": 10485760,
+    "AllowedExtensions": [ ".pdf", ".doc", ".docx", ".xls", ".xlsx", ".ppt", ".pptx", ".txt", ".jpg", ".jpeg", ".png", ".zip" ]
+  },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=INETPC-4000;Database=PMA;Integrated Security=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=hamdy;Database=PMA;Integrated Security=True;TrustServerCertificate=True;"
   },
   "Serilog": {
     "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Seq"],
