--- a/pma-api-server/src/PMA.Api/appsettings.json
+++ b/pma-api-server/src/PMA.Api/appsettings.json
@@ -7,6 +7,9 @@
     }
   },
   "AllowedHosts": "*",
+  "CorsSettings": {
+    "AllowedOrigins": ["http://localhost:5173"]
+  },
   "AttachmentSettings": {
     "MaxFileSize": 10485760,
     "AllowedExtensions": [ ".pdf", ".doc", ".docx", ".xls", ".xlsx", ".ppt", ".pptx", ".txt", ".jpg", ".jpeg", ".png", ".zip" ]
