feat: Update WebSocket configuration and implement SignalR for real-time notifications

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ NODE_ENV=development
 
 # API Configuration  //52246
 VITE_API_URL=http://localhost:52246/api 
-VITE_WS_URL=ws://localhost:3002
+VITE_WS_URL=ws://localhost:52246/notificationHub
 VITE_USE_MOCK_API=false
 
 # Application Configuration
@@ -15,4 +15,4 @@ VITE_ENABLE_CONSOLE_LOGS=true
 
 # Realtime (SignalR)
 # Set to true to enable SignalR realtime notifications, false to disable initializing the websocket connection
-VITE_ENABLE_SIGNALR=false
+VITE_ENABLE_SIGNALR=true
