feat: Add AI-powered form suggestion system using Ollama
- Implemented useFormSuggestion hook for generating AI suggestions in forms.
- Created llmService for handling API requests to the Ollama server.
- Added AIFormSuggestionExample component to demonstrate usage of AI suggestions.
- Updated setup script to automate installation of Ollama and model setup.
- Included detailed documentation for AI setup and usage in AI_SETUP.md.
- Added mermaid-simple.lua for converting mermaid diagrams to images.
- Introduced modern-style.yaml for improved PDF styling in Pandoc.
- Implemented test script for LLM integration to verify functionality and performance.

--- a/.env
+++ b/.env
@@ -16,3 +16,8 @@ VITE_ENABLE_CONSOLE_LOGS=true
 # Realtime (SignalR)
 # Set to true to enable SignalR realtime notifications, false to disable initializing the websocket connection
 VITE_ENABLE_SIGNALR=true
+
+# AI-Powered Form Suggestions (Ollama)
+VITE_LLM_ENABLED=true
+VITE_LLM_API_URL=http://localhost:11434
+VITE_LLM_MODEL=mistral:7b-instruct
