--- a/.env.example
+++ b/.env.example
@@ -160,6 +160,18 @@ NEXT_PUBLIC_MOCK_DELAY_MIN=200
 NEXT_PUBLIC_MOCK_DELAY_MAX=800
 
 # =============================================================================
+# LOCAL LLM CONFIGURATION (AI-Powered Form Suggestions)
+# =============================================================================
+# Enable/disable LLM-powered form suggestions
+VITE_LLM_ENABLED=true
+
+# Ollama API endpoint (default: http://localhost:11434)
+VITE_LLM_API_URL=http://localhost:11434
+
+# Model to use for suggestions (mistral:7b-instruct, llama3.1:8b, etc.)
+VITE_LLM_MODEL=mistral:7b-instruct
+
+# =============================================================================
 # PRODUCTION SETTINGS (for .env.production)
 # =============================================================================
 # Remember to:
