--- a/.env.example
+++ b/.env.example
@@ -165,7 +165,13 @@ NEXT_PUBLIC_MOCK_DELAY_MAX=800
 # Enable/disable LLM-powered form suggestions
 VITE_LLM_ENABLED=true
 
-# Ollama API endpoint (default: http://localhost:11434)
+# Use n8n workflow (true) or direct Ollama (false)
+VITE_LLM_USE_N8N=true
+
+# n8n webhook URL (when USE_N8N=true)
+VITE_LLM_N8N_WEBHOOK_URL=http://localhost:5678/webhook/ai-suggest
+
+# Direct Ollama API endpoint (when USE_N8N=false, default: http://localhost:11434)
 VITE_LLM_API_URL=http://localhost:11434
 
 # Model to use for suggestions (mistral:7b-instruct, llama3.1:8b, etc.)
