--- a/pma-api-server/src/PMA.Api/PMA.Api.csproj
+++ b/pma-api-server/src/PMA.Api/PMA.Api.csproj
@@ -7,7 +7,14 @@
     <UserSecretsId>aspnet-PMA.Api-12345678-1234-1234-1234-123456789012</UserSecretsId>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>$(NoWarn);1591</NoWarn>
+    <IsTransformWebConfigDisabled>true</IsTransformWebConfigDisabled>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Update="web.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
