--- a/.env
+++ b/.env
@@ -24,9 +24,9 @@ VITE_LLM_ENABLED=true
 VITE_LLM_USE_N8N=true
 
 # n8n webhook URL (when USE_N8N=true)
-VITE_LLM_N8N_WEBHOOK_URL=http://localhost:5678/webhook/ai-suggest
+VITE_LLM_N8N_WEBHOOK_URL=http://localhost:5678/webhook/ai-suggest-agent
 
-#http://localhost:5678/webhook/ai-suggest
+#http://localhost:5678/webhook/ai-suggest-agent
 
 # Direct Ollama config (when USE_N8N=false)
 VITE_LLM_API_URL=http://localhost:11434
