feat: Enhance AI agent workflow with session tracking and improved response handling in ProjectRequirementsPage

--- a/.env.example
+++ b/.env.example
@@ -168,14 +168,17 @@ VITE_LLM_ENABLED=true
 # Use n8n workflow (true) or direct Ollama (false)
 VITE_LLM_USE_N8N=true
 
-# n8n webhook URL (when USE_N8N=true)
+# n8n webhook URL for non-agent workflow (when USE_N8N=true)
 VITE_LLM_N8N_WEBHOOK_URL=http://localhost:5678/webhook/ai-suggest
+
+# n8n webhook URL for agent workflow with memory (recommended)
+VITE_LLM_N8N_AGENT_WEBHOOK_URL=http://localhost:5678/webhook/ai-suggest-agent
 
 # Direct Ollama API endpoint (when USE_N8N=false, default: http://localhost:11434)
 VITE_LLM_API_URL=http://localhost:11434
 
-# Model to use for suggestions (mistral:7b-instruct, llama3.1:8b, etc.)
-VITE_LLM_MODEL=mistral:7b-instruct
+# Model to use for suggestions (llama3.1:8b recommended for Arabic+English)
+VITE_LLM_MODEL=llama3.1:8b
 
 # =============================================================================
 # PRODUCTION SETTINGS (for .env.production)
