Add file size and type validation configuration (max 10MB) and translations

--- a/.env
+++ b/.env
@@ -31,3 +31,7 @@ VITE_LLM_N8N_WEBHOOK_URL=http://localhost:5678/webhook/ai-suggest-agent
 # Direct Ollama config (when USE_N8N=false)
 VITE_LLM_API_URL=http://localhost:11434
 VITE_LLM_MODEL=mistral:7b-instruct
+
+# File Upload Configuration
+VITE_MAX_FILE_SIZE_MB=10
+VITE_ALLOWED_FILE_TYPES=pdf,doc,docx,xls,xlsx,ppt,pptx,txt,jpg,jpeg,png,gif,bmp,zip,rar
