--- a/pma-api-server/src/PMA.Api/appsettings.json
+++ b/pma-api-server/src/PMA.Api/appsettings.json
@@ -11,11 +11,11 @@
     "AllowedOrigins": ["http://localhost:5173"]
   },
   "AttachmentSettings": {
-    "MaxFileSize": 10485760,
-    "AllowedExtensions": [ ".pdf", ".doc", ".docx", ".xls", ".xlsx", ".ppt", ".pptx", ".txt", ".jpg", ".jpeg", ".png", ".zip" ]
+    "MaxFileSize": 52428800,
+    "AllowedExtensions": [ ".pdf", ".doc", ".docx", ".xls", ".xlsx", ".ppt", ".pptx", ".txt", ".jpg", ".jpeg", ".png", ".gif", ".bmp", ".zip", ".rar" ]
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=hamdy;Database=PMA;Integrated Security=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=INETPC-4000;Database=PMA;Integrated Security=True;TrustServerCertificate=True;"
   },
   "Serilog": {
     "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Seq"],
