refactor: Update IIS configuration for large file uploads in web.config

--- a/pma-api-server/src/PMA.Api/web.config
+++ b/pma-api-server/src/PMA.Api/web.config
@@ -9,6 +9,13 @@
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
       <aspNetCore processPath="dotnet" arguments=".\PMA.Api.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
+
+      <!-- Configure IIS request limits for large file uploads -->
+      <security>
+        <requestFiltering>
+          <requestLimits maxAllowedContentLength="524288000" /> <!-- 500 MB -->
+        </requestFiltering>
+      </security>
     </system.webServer>
   </location>
 </configuration>
