--- a/pma-api-server/src/PMA.Api/appsettings.json
+++ b/pma-api-server/src/PMA.Api/appsettings.json
@@ -15,7 +15,7 @@
     "AllowedExtensions": [ ".pdf", ".doc", ".docx", ".xls", ".xlsx", ".ppt", ".pptx", ".txt", ".jpg", ".jpeg", ".png", ".gif", ".bmp", ".zip", ".rar" ]
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-88VGRA9;Database=PMA;Integrated Security=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=INETPC-4000;Database=PMA;Integrated Security=True;TrustServerCertificate=True;"
   },
   "Serilog": {
     "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Seq"],
