--- a/pma-api-server/src/PMA.Api/appsettings.json
+++ b/pma-api-server/src/PMA.Api/appsettings.json
@@ -8,18 +8,14 @@
   },
   "AllowedHosts": "*",
   "CorsSettings": {
-    "AllowedOrigins": ["http://localhost:5173"]
+    "AllowedOrigins": [ "http://localhost:5173", "http://localhost" ]
   },
   "AttachmentSettings": {
     "MaxFileSize": 52428800,
     "AllowedExtensions": [ ".pdf", ".doc", ".docx", ".xls", ".xlsx", ".ppt", ".pptx", ".txt", ".jpg", ".jpeg", ".png", ".gif", ".bmp", ".zip", ".rar" ]
   },
   "ConnectionStrings": {
-<<<<<<< HEAD
-    "DefaultConnection": "Server=DESKTOP-88VGRA9;Database=PMA;Integrated Security=True;TrustServerCertificate=True;"
-=======
-    "DefaultConnection": "Server=INETPC-4000;Database=PMA;Integrated Security=True;TrustServerCertificate=True;"
->>>>>>> 5853a6eeec75e63286fb153195a98372009a680a
+    "DefaultConnection": "Server=INETPC-4000;Database=PMA;Integrated Security=True;TrustServerCertificate=True;" 
   },
   "Serilog": {
     "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Seq"],
