feat: Implement Company Employee Management
- Added CompanyEmployeeRepository for CRUD operations on company employees.
- Created useCompanyEmployees hook for managing employee data and pagination.
- Developed CompanyEmployeesPage component for displaying and managing employees.
- Introduced companyEmployeeService for API interactions related to employees.
- Defined TypeScript interfaces for CompanyEmployee and related request/response types.
- Implemented modals for creating, editing, viewing, and deleting employees.
- Added search functionality and pagination controls for employee listing.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev:api": "cd mock-api-server && npm run dev",
     "dev:all": "concurrently \"npm run dev\" \"npm run dev:api\" --names \"Frontend,API\" --prefix-colors \"cyan,magenta\"",
     "build": "tsc && vite build",
-    "build:force": "vite build",
+    "build:dev": "vite build",
+    "build:qc": "vite build  --mode qc",
+    "build:prod": "vite build  --mode production",
     "lint": "eslint --fix",
     "preview": "vite preview"
   },
