feat: Update environment configurations and enhance user management features

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 # Development Environment Variables
 NODE_ENV=development
 
+BASE_URL=/
+VITE_BASE_PATH=/
 # API Configuration  //52246
 VITE_API_URL=http://localhost:52246/api 
 VITE_WS_URL=ws://localhost:52246/notificationHub
