--- a/.env.production
+++ b/.env.production
@@ -2,10 +2,12 @@
 NODE_ENV=production
 
 # API Configuration  //52246
-VITE_API_URL=https://commona:52246/api 
-VITE_WS_URL=https://localhost:52246/notificationHub
+VITE_API_URL=https://commonapps.mil.dir/pmaapi/api 
+VITE_WS_URL=https://commonapps.mil.dir/pmaapi/notificationHub
 VITE_USE_MOCK_API=false
 
+BASE_URL=/pmaweb
+VITE_BASE_PATH=/pmaweb/
 # Application Configuration
 VITE_APP_NAME=Project Management Application
 VITE_APP_VERSION=1.0.0
