--- a/pma-api-server/src/PMA.Api/appsettings.json
+++ b/pma-api-server/src/PMA.Api/appsettings.json
@@ -10,6 +10,12 @@
   "CorsSettings": {
     "AllowedOrigins": [ "http://localhost:5173", "http://localhost" ]
   },
+  "Ollama": {
+    "BaseUrl": "http://localhost:11434",
+    "DefaultModel": "llama3.1:8b",
+    "Temperature": 0.5,
+    "MaxTokens": 400
+  },
   "AttachmentSettings": {
     "MaxFileSize": 52428800,
     "AllowedExtensions": [ ".pdf", ".doc", ".docx", ".xls", ".xlsx", ".ppt", ".pptx", ".txt", ".jpg", ".jpeg", ".png", ".gif", ".bmp", ".zip", ".rar" ]
