feat: Implement save-memory endpoint in AIController and update ProjectRequirementsPage to use it

--- a/pma-api-server/src/PMA.Api/appsettings.json
+++ b/pma-api-server/src/PMA.Api/appsettings.json
@@ -16,6 +16,9 @@
     "Temperature": 0.5,
     "MaxTokens": 400
   },
+  "N8n": {
+    "AgentWebhookUrl": "http://localhost:5678/webhook/ai-suggest-agent"
+  },
   "AttachmentSettings": {
     "MaxFileSize": 52428800,
     "AllowedExtensions": [ ".pdf", ".doc", ".docx", ".xls", ".xlsx", ".ppt", ".pptx", ".txt", ".jpg", ".jpeg", ".png", ".gif", ".bmp", ".zip", ".rar" ]
