--- a/pma-api-server/src/PMA.Api/appsettings.Production.json
+++ b/pma-api-server/src/PMA.Api/appsettings.Production.json
@@ -1,4 +1,7 @@
 {
+  "N8n": {
+    "AgentWebhookUrl": "https://your-n8n-domain.com/webhook/ai-suggest-agent"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
