feat: Update Ollama configuration for production and adjust local settings for compatibility

--- a/pma-api-server/src/PMA.Api/appsettings.Production.json
+++ b/pma-api-server/src/PMA.Api/appsettings.Production.json
@@ -1,4 +1,11 @@
 {
+  "Ollama": {
+    "BaseUrl": "https://askmai.tawasul.mil.ae",
+    "ApiKey": "YOUR_PRODUCTION_API_KEY_HERE",
+    "DefaultModel": "oss-20b-fast",
+    "Temperature": 0.5,
+    "MaxTokens": 400
+  },
   "N8n": {
     "AgentWebhookUrl": "https://your-n8n-domain.com/webhook/ai-suggest-agent"
   },
