--- a/.env.production
+++ b/.env.production
@@ -25,10 +25,9 @@ VITE_LLM_ENABLED=true
 # Use n8n workflow (true) or direct Ollama (false)
 VITE_LLM_USE_N8N=true
 
-# n8n webhook URL (when USE_N8N=true)
+# n8n webhook URLs
 VITE_LLM_N8N_WEBHOOK_URL=http://localhost:5678/webhook/ai-suggest-agent
-
-#http://localhost:5678/webhook/ai-suggest-agent
+VITE_LLM_N8N_DIAGRAM_WEBHOOK_URL=http://localhost:5678/webhook/ai-diagram
 
 # Direct Ollama config (when USE_N8N=false)
 VITE_LLM_API_URL=http://localhost:11434
