--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "framer-motion": "11.18.2",
     "katex": "^0.16.22",
     "lucide-react": "^0.539.0",
+    "mermaid": "^11.12.1",
     "pdfjs-dist": "^5.4.149",
     "quill": "^2.0.3",
     "quill-better-table": "^1.2.10",
@@ -69,6 +70,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hot-toast": "^2.6.0",
+    "react-mermaid2": "^0.1.4",
     "react-pdf": "^10.1.0",
     "react-quill": "^2.0.0",
     "react-resizable": "^3.0.5",
