--- a/pma-api-server/src/PMA.Api/appsettings.json
+++ b/pma-api-server/src/PMA.Api/appsettings.json
@@ -11,7 +11,7 @@
     "AllowedOrigins": [ "http://localhost:5173", "http://localhost" ]
   },
   "Ollama": {
-    "BaseUrl": "http://localhost:3000",
+    "BaseUrl": "http://localhost:3000/api/chat/completions",
     "ApiKey": "sk-f63310582dd542729e920f906228030c",
     "DefaultModel": "llama3.1:8b",
     "Temperature": 0.5,
