--- a/pma-api-server/src/PMA.Api/appsettings.json
+++ b/pma-api-server/src/PMA.Api/appsettings.json
@@ -11,7 +11,7 @@
     "AllowedOrigins": [ "http://localhost:5173", "http://localhost" ]
   },
   "Ollama": {
-    "BaseUrl": "http://localhost:3000/api/chat/completions",
+    "BaseUrl": "http://localhost:3000",
     "ApiKey": "sk-f63310582dd542729e920f906228030c",
     "DefaultModel": "llama3.1:8b",
     "Temperature": 0.5,
@@ -25,7 +25,7 @@
     "AllowedExtensions": [ ".pdf", ".doc", ".docx", ".xls", ".xlsx", ".ppt", ".pptx", ".txt", ".jpg", ".jpeg", ".png", ".gif", ".bmp", ".zip", ".rar" ]
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=INETPC-4000;Database=PMA;Integrated Security=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-88VGRA9;Database=PMA;Integrated Security=True;TrustServerCertificate=True;"
   },
   "Serilog": {
     "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Seq"],
